Remove internal ListUtil and Fields (#2593)
Both of these classes were used prior to JDK 8 to implement list filtering, for which streams are now available in JDK 8+.